--- a/Source/Components/header.scss
+++ b/Source/Components/header.scss
@@ -11,6 +11,9 @@ header {
         justify-content: space-between;
         align-items: center;
         padding: 16px 0;
+        max-width: 1650px;  
+        width: 100%;        
+        margin: 0 auto;     
     }
 
     .menu {
